--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -43,216 +43,312 @@
   .teacher-container {
     display: flex;
   }
-  .teacher-list-container {
-    padding-left: 40px;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .teacher-list-container {
-    padding-left: 25px;
-  }
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .image-teacher {
-    margin-bottom: 20px;
-  }
-}
 
-.teacher-name {
-  display: inline-block;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.08em;
-  color: var(--title-text-color);
-  padding-bottom: 10px;
-  width: 280px;
-  border-bottom: 1px solid #b9b9b9;
-}
-@media screen and (min-width: 768px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .image-teacher {
+      margin-bottom: 20px;
+    }
+  }
   .teacher-name {
-    border-bottom: 1px solid #b9b9b9;
-    width: 401px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .teacher-name {
-    font-size: 30px;
-    line-height: 1.123;
-    margin-bottom: 15px;
-    border-bottom: 1px solid #b9b9b9;
-    width: 640px;
-  }
-}
-@media screen and (min-width: 320px) {
-  .teacher-container {
-    margin-top: 20px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .teacher-container {
-    margin-top: 30px;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .teacher-container {
-    margin-top: 50px;
-  }
-}
-.teacher-list-item {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-  margin-left: 9px;
-}
-@media screen and (min-width: 320px) {
-  .teacher-list-item {
-    margin-top: 20px;
-    margin-bottom: 5px;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .teacher-list-item {
-    font-size: 16px;
-    line-height: 1.25;
-    margin-bottom: 15px;
-    margin-left: 34px;
-  }
-}
-.teacher-list-item::before {
-  display: inline-block;
-  content: '';
-  width: 17px;
-  height: 14px;
-  margin-right: 9px;
-  background-image: url(../images/teacher/vector.svg);
-}
-
-.line-orage {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 164.9%;
-  align-items: center;
-  letter-spacing: 0.08em;
-  color: var(--accent-color);
-}
-.teacher-list-container-text {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.666;
-  color: var(--secondary-text-color);
-}
-.teacher-list-container-text:not(:last-child) {
-  margin-bottom: 24px;
-}
-
-.teacher-list-container {
-  margin-bottom: 10px;
-}
-@media screen and (min-width: 1344px) {
-  .teacher-list-container-text {
-    font-size: 18px;
-    line-height: 1.555;
-    margin-bottom: 20px;
-  }
-}
-.teacher-link {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.666;
-  text-decoration-line: underline;
-  color: var(--accent-color);
-}
-@media screen and (min-width: 1344px) {
-  .teacher-link {
-    font-size: 18px;
-    line-height: 1.555;
-  }
-}
-
-.guarantee-list-item {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.666;
-  color: var(--primaty-text-color);
-  margin-bottom: 28px;
-}
-.guarantee-list-item:not(:last-child) {
-  margin-bottom: 24px;
-}
-.guarantee-list-item::before {
-  display: inline-block;
-  content: '';
-  width: 14px;
-  height: 20px;
-  margin-right: 20px;
-  background-image: url(../images/teacher/fire.svg);
-}
-
-@media screen and (min-width: 1344px) {
-  .guarantee-list-item {
+    display: inline-block;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 800;
     font-size: 20px;
-    line-height: 1.4;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+    color: var(--title-text-color);
+    padding-bottom: 10px;
+    width: 280px;
+    border-bottom: 1px solid #b9b9b9;
   }
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .guarantee .container {
-    background-color: #f1f1f1;
+  @media screen and (min-width: 768px) {
+    .teacher-name {
+      border-bottom: 1px solid #b9b9b9;
+      width: 401px;
+    }
   }
-}
-@media screen and (min-width: 320px) {
-  .guarantee-container-list {
-    padding-top: 30px;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-bottom: 31px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .guarantee-container-list {
-    background-color: #f1f1f1;
-    padding-top: 30px;
-    padding-right: 50px;
-    padding-left: 79px;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .guarantee-container-list {
-    background-color: #f1f1f1;
-    padding-top: 50px;
-    margin-top: 30px;
-    padding-bottom: 45px;
-    padding-right: 112px;
-    padding-left: 112px;
-  }
-}
 
-.color-span {
-  color: var(--accent-color);
-}
+  @media screen and (min-width: 1344px) {
+    .teacher-name {
+      font-size: 30px;
+      line-height: 1.123;
+      margin-bottom: 15px;
+      border-bottom: 1px solid #b9b9b9;
+      width: 640px;
+    }
+  }
+  @media screen and (min-width: 320px) {
+    .teacher-container {
+      margin-top: 20px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .teacher-container {
+      margin-top: 30px;
+    }
+  }
+  @media screen and (min-width: 1344px) {
+    .teacher-container {
+      margin-top: 50px;
+    }
+  }
+  .teacher-list-item {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.06em;
+    color: var(--title-text-color);
+  }
+  @media screen and (min-width: 320px) {
+    .teacher-list-item {
+      margin-top: 20px;
+      margin-bottom: 5px;
+    }
+  }
+  @media screen and (min-width: 1344px) {
+    .teacher-list-item {
+      font-size: 16px;
+      line-height: 1.25;
+      margin-bottom: 15px;
+    }
+  }
+  @media screen and (min-width: 320px) {
+    .teacher-list-item::before {
+      display: inline-block;
+      content: '';
+      width: 17px;
+      height: 14px;
+      margin-right: 9px;
+      background-image: url(../images/teacher/vector.svg);
+      background-repeat: no-repeat;
+    }
+  }
+  @media screen and (min-width: 1344px) {
+    .teacher-list-container {
+      padding-left: 25px;
+      position: relative;
+    }
+    .teacher-list-item::before {
+      display: inline-block;
+      content: '';
+      width: 24px;
+      height: 20px;
+      background-image: url(../images/teacher/vector.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      left: 738px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .teacher-list-container {
+      padding-left: 60px;
+      position: relative;
+    }
+    .teacher-list-item::before {
+      display: inline-block;
+      content: '';
+      width: 24px;
+      height: 20px;
+      background-image: url(../images/teacher/vector.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      left: 40px;
+    }
+  }
+  .line-orage {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 164.9%;
+    align-items: center;
+    letter-spacing: 0.08em;
+    color: var(--accent-color);
+  }
+  .teacher-list-container-text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.666;
+    color: var(--secondary-text-color);
+  }
+  .teacher-list-container-text:not(:last-child) {
+    margin-bottom: 24px;
+  }
 
-.guarantee-icon-fire {
-  width: 20px;
-  height: 15px;
-}
-@media screen and (min-width: 1344px) {
+  .teacher-list-container {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: 1344px) {
+    .teacher-list-container-text {
+      font-size: 18px;
+      line-height: 1.555;
+    }
+  }
+  .teacher-link {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.666;
+    text-decoration-line: underline;
+    color: var(--accent-color);
+  }
+  @media screen and (min-width: 1344px) {
+    .teacher-link {
+      font-size: 18px;
+      line-height: 1.555;
+    }
+  }
+
+  .guarantee-list-item {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.666;
+    color: var(--primaty-text-color);
+  }
+  .guarantee-list-item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    .guarantee-list-item {
+      font-size: 20px;
+      line-height: 1.4;
+    }
+  }
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .guarantee .container {
+      background-color: #f1f1f1;
+    }
+  }
+  @media screen and (min-width: 320px) {
+    .guarantee-container-list {
+      padding-top: 30px;
+      padding-right: 20px;
+      padding-left: 20px;
+      padding-bottom: 31px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .guarantee-container-list {
+      background-color: #f1f1f1;
+      padding-top: 30px;
+      padding-right: 50px;
+      padding-left: 79px;
+    }
+  }
+  @media screen and (min-width: 320px) {
+    .guarantee-container-list {
+      background-color: #f1f1f1;
+      padding-top: 50px;
+      margin-top: 30px;
+      padding-bottom: 45px;
+      padding-right: 20px;
+      padding-left: 55px;
+      position: relative;
+    }
+    .guarantee-list-item::before {
+      display: inline-block;
+      content: '';
+      width: 14px;
+      height: 20px;
+      background-image: url(../images/teacher/fire.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      left: 20px;
+    }
+    .guarantee-list-item::after {
+      display: inline-block;
+      content: '';
+      width: 5px;
+      height: 40px;
+      background-image: url(../images/teacher/line.svg);
+      position: absolute;
+      left: 50px;
+      margin-top: 7px;
+    }
+  }
+  @media screen and (min-width: 1344px) {
+    .guarantee-container-list {
+      background-color: #f1f1f1;
+      padding-top: 50px;
+      margin-top: 30px;
+      padding-bottom: 45px;
+      padding-right: 112px;
+      padding-left: 164px;
+      position: relative;
+    }
+    .guarantee-list-item::before {
+      display: inline-block;
+      content: '';
+      width: 14px;
+      height: 20px;
+      background-image: url(../images/teacher/fire.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      left: 112px;
+    }
+    .guarantee-list-item::after {
+      display: inline-block;
+      content: '';
+      width: 5px;
+      height: 40px;
+      background-image: url(../images/teacher/line.svg);
+      position: absolute;
+      left: 118px;
+      margin-top: 7px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .guarantee-container-list {
+      background-color: #f1f1f1;
+      padding-top: 50px;
+      margin-top: 30px;
+      padding-bottom: 45px;
+      padding-right: 112px;
+      padding-left: 118px;
+      position: relative;
+    }
+    .guarantee-list-item::before {
+      display: inline-block;
+      content: '';
+      width: 14px;
+      height: 20px;
+      background-image: url(../images/teacher/fire.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      left: 79px;
+    }
+    .guarantee-list-item::after {
+      display: inline-block;
+      content: '';
+      width: 5px;
+      height: 40px;
+      background-image: url(../images/teacher/line.svg);
+      position: absolute;
+      left: 84px;
+      margin-top: 7px;
+    }
+  }
+  .color-span {
+    color: var(--accent-color);
+  }
+
   .guarantee-icon-fire {
-    width: 30px;
-    height: 20px;
+    width: 20px;
+    height: 15px;
+  }
+  @media screen and (min-width: 1344px) {
+    .guarantee-icon-fire {
+      width: 30px;
+      height: 20px;
+    }
   }
 }
