--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -6,6 +6,14 @@
       <picture>
         <source
           srcset="
+            ./images/teacher/teacher1200@1x.webp 1x,
+            ./images/teacher/teacher1200@1x.webp 2x
+          "
+          media="(min-width: 1344px)"
+          type="image/webp"
+        />
+        <source
+          srcset="
             ./images/teacher/teacher1200@1x.jpg 1x,
             ./images/teacher/teacher1200@2x.jpg 2x
           "
@@ -13,19 +21,18 @@
         />
         <source
           srcset="
-            ./images/teacher/teacher1200@1x.webp 1x,
-            ./images/teacher/teacher1200@2x.webp 2x
+            ./images/teacher/teacher320@1x.webp 1x,
+            ./images/teacher/teacher320@2x.webp 2x
           "
-          media="(min-width: 1344px)"
+          media="(min-width: 768px)"
           type="image/webp"
         />
-
         <source
           srcset="
             ./images/teacher/teacher320@1x.jpg 1x,
             ./images/teacher/teacher320@2x.jpg 2x
           "
-          media="(min-width: 319px)"
+          media="(min-width: 768px)"
         />
         <source
           srcset="
@@ -34,6 +41,13 @@
           "
           media="(min-width: 319px)"
           type="image/webp"
+        />
+        <source
+          srcset="
+            ./images/teacher/teacher320@1x.jpg 1x,
+            ./images/teacher/teacher320@2x.jpg 2x
+          "
+          media="(min-width: 319px)"
         />
         <img
           class="image-teacher"
