--- a/src/sass/_guarantee.scss
+++ b/src/sass/_guarantee.scss
@@ -34,7 +34,7 @@
     content: ' ';
     display: block;
     position: absolute;
-    left: 0;
+    left: 0.2%;
     top: 40%;
     height: 50px;
     border-left: 1px dashed var(--secondary-text-color);
@@ -59,7 +59,7 @@
   color: var(--accent-color);
 }
 .guarantee-span-accent {
-  margin-left: -4px;
+  margin-left: -5px;
 }
 @media screen and (min-width: 768px) {
   .guarantee-list {
