add murkup to footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,43 @@
-<h1>Footer</h1>
+<footer class="footer">
+  <div class="footer__container">
+    <div class="legal">
+      <ul class="legal__list">
+        <li class="legal__item">
+          <a class="legal__link" href="">Our Locations
+            <svg class="legal__icon" width="4" height="8">
+              <use href="../src/images/sprite.svg#right"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="legal__item">
+          <a class="legal__link" href="">Franchise
+            <svg width="4" height="8">
+              <use href="../src/images/sprite.svg#right"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h2>homemade ice cream made <span>with passion</span></h2>
+    </div>
+    <div>
+      <ul>
+        <li class="nets__github">
+          <a class="nets__link" href="github"></a>
+        </li>
+        <li class="nets__telegram">
+          <a class="nets__link" href="telegram"></a>
+        </li>
+        <li class="nets__facebook">
+          <a class="nets__link" href="facebook"></a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <b>Feel free to contact</b>
+      <a href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
+    </div>
+    <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+  </div>
+</footer>
