--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,6 +1,7 @@
 <section class="problems-section">
 <div class="problems-img-cont">
     <picture>
+        <source srcset="/images/fire/fire-min.webp 1x, /images/fire/fire@2x-min.webp 2x" type="image/webp" >
         <img class="problems-img" src="/images/fire/fire-min.png" alt="fire"
         srcset="/images/fire/fire@2x-min.png 2x">
     </picture>
@@ -33,5 +34,6 @@
             <p class="problems-description">Недостаток самоорганизации и лень</p>
         </li>
     </ul>
+
 </div>
 </section>
