--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,3 +2,5 @@
 @import './base/common';
 @import './components/components';
 @import './layout/hero';
+@import './layout/teacher';
+@import './layout/guarantees';
