--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,35 @@
 <header>
-    <div class="container header">
+    <div class="container header" id="header">
         <a href="">
             <img src="./images/header/logo.svg" alt="" width="199px">
             <!-- <svg class="logo">
                 <use href="./images/header/sprite.svg#"></use>
               </svg> -->
         </a>
-        <div class="menu-container">
+        <div class="menu-container" data-menu>
+            <button class="buy-now btn" type="button" data-modal-open>Buy now
+              <svg class="buy-now-img">
+                  <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
+                </svg>
+            </button>
             <nav class="menu-nav">
                 <ul class="menu">
-                    <li class="menu-item">Home</li>
-                    <li class="menu-item">About us</li>
-                    <li class="menu-item">How it’s made?</li>
-                    <li class="menu-item">Our products</li>
-                    <li class="menu-item">Contact</li>
+                    <li class="menu-item">
+                        <a href="#header" class="menu-item-link">Home</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#reviews" class="menu-item-link">About us</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#traditions" class="menu-item-link">How it’s made?</a>
+                        </li>
+                    <li class="menu-item">
+                        <a href="#products" class="menu-item-link">Our products</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#contact" class="menu-item-link">Contact</a>
+
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -29,10 +45,82 @@
               ></use>
             </svg>
           </button>
-          <button class="buy-now btn" type="button">Buy now
-            <svg class="buy-now-img">
-                <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
-              </svg>
-          </button>
     </div>
+    <!-- Модальное окно заказа -->
+    <!-- <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button
+            class="close-button"
+            aria-label="Закрыть окно заказа услуг"
+            data-modal-close
+          >
+            <svg class="close-button-img">
+              <use href="./images/header/sprite-hero.svg#icon-close"></use>
+            </svg>
+          </button>
+          <form action="#">
+            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+            <ul class="contacts-input">
+              <li class="contacts-input-item">
+                <label class="input-title">
+                  Имя
+                  <input type="text" value="" name="name" required />
+                  <svg class="contacts-input-img">
+                    <use
+                      href="./images/header/sprite-hero.svg#icon-input-contact1"
+                    ></use>
+                  </svg>
+                </label>
+              </li>
+              <li class="contacts-input-item">
+                <label class="input-title">
+                  Телефон
+                  <input type="tel" value="" name="tel" required />
+                  <svg class="contacts-input-img">
+                    <use
+                      href="./images/header/sprite-hero.svg#icon-input-contact2"
+                    ></use>
+                  </svg>
+                </label>
+              </li>
+              <li class="contacts-input-item">
+                <label class="input-title">
+                  Почта
+                  <input type="email" value="" name="email" required />
+                  <svg class="contacts-input-img">
+                    <use
+                      href="./images/header/sprite-hero.svg#icon-input-contact3"
+                    ></use>
+                  </svg>
+                </label>
+              </li>
+              <li class="contacts-input-item">
+                <label class="input-title"
+                  >Комментарий
+                  <textarea
+                    class="comment"
+                    name="comment"
+                    placeholder="Введите текст"
+                  ></textarea>
+                </label>
+              </li>
+            </ul>
+            <input
+              class="checkbox"
+              type="checkbox"
+              name="subscription policy"
+              value=""
+              id="policy"
+            />
+            <label class="subscription policy" for="policy">
+              <span class="checkicon"></span>
+              Соглашаюсь с рассылкой и принимаю
+              <a class="contract-terms" href="">Условия договора</a>
+            </label>
+            <button class="subscribtion-button" type="submit">
+              Отправить
+            </button>
+          </form>
+        </div>
+    </div> -->
 </header>
