--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -4,35 +4,44 @@
             <div class="feature-list__container">
                 <ul class="feature-list list">
                     <li class="feature-list__item">
-
-                        <svg class="feature-list__icon">
-                            <use href="./images/sprite.svg#icon-fire"></use>
-                        </svg>
-                            <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-                                тестировании. Иначе мы вернем деньги. <span>*</span>
-                            </p>
+                        <div class="dash_dott_line">
+                            <img class="foto" src="./images/vector_6.png" alt="">
+                        </div>   
+                            <svg class="feature-list__icon">
+                                <use href="./images/sprite.svg#icon-fire"></use>
+                            </svg>                            
+                                <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+                                    тестировании. Иначе мы вернем деньги. <span>*</span>
+                                </p>
                                 
                     </li>
                     <li class="feature-list__item">
 
+                        <div class="dash_dott_line">
+                            <img class="foto" src="./images/vector_6.png" alt="">
+                        </div>
+                        
                         <svg class="feature-list__icon">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
                             <p class="feature-list__description">Ты научишься писать сочинения минимум на 10 баллов из 14. 
                                <span>В то время как 30% учеников получили за сочинение 0.</span> 
-                            </p>
-                            
-                    </li>
+                            </p>                            
+                    </li>                        
                     <li class="feature-list__item">
+
+                        <div class="dash_dott_line">
+                            <img class="foto" src="./images/vector_6.png" alt="">
+                        </div>
 
                         <svg class="feature-list__icon">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
                             <p class="feature-list__description">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
                                 после формирования команд.
-                            </p>
-                            
+                            </p>                            
                     </li>
+
                     <li class="feature-list__item">
 
                         <svg class="feature-list__icon">
