--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -8,9 +8,6 @@
     letter-spacing: 0.03em;
     margin-bottom: 30px;
   }
-  .feature-list__description span {
-    color: var(--orange-color);
-  }
 
   .garants .feature-list__container {
     //   outline: 1px solid teal;
@@ -19,113 +16,129 @@
   }
 
   .feature-list__item:not(:last-child) {
-    padding-bottom: 23px;
+    margin-bottom: 23px;
   }
   .feature-list__item {
-    display: flex;
+    // outline: 1px solid rgb(58, 128, 0);
+    position: relative;
+    display: inline-flex;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 20px;
+    margin-left: 20px;
+  }
+  .dash_dott_line {
+    display: block;
+    position: absolute;
+    top: 17px;
+    left: 3px;
+    min-height: 68px;
+    width: auto;
+  }
+  .feature-list__icon {
+    // outline: 1px solid red;
+    width: 20px;
+    height: 15px;
   }
 
+  .feature-list__description span {
+    color: var(--orange-color);
+  }
   .feature-list__description {
     margin-left: 20px;
   }
-  .feature-list__icon {
-    max-width: 15px;
-    height: 20px;
+
+  // =========2 секция
+  .comments__title {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 50px;
+    margin-bottom: 20px;
   }
-}
-// =========2 секция
-.comments__title {
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 130%;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-.comments-list {
-  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
-}
-.comments .comments-main-foto__main-foto {
-  // outline: 1px solid green;
-  margin-right: auto;
-  margin-left: auto;
-}
-.comments-list__name {
-  display: block;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 1.214;
-  text-align: center;
-  letter-spacing: 0.08em;
-  margin-bottom: 10px;
-  color: var(--orange-color);
-  // outline: 1px solid green;
-}
-.comments-list .comments-list__info {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.25;
-  text-align: center;
-  letter-spacing: 0.08em;
-  color: var(--grey-color);
-  margin-bottom: 10px;
-}
+  .comments-list {
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+  }
+  .comments .comments-main-foto__main-foto {
+    // outline: 1px solid green;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .comments-list__name {
+    display: block;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 1.214;
+    text-align: center;
+    letter-spacing: 0.08em;
+    margin-bottom: 10px;
+    color: var(--orange-color);
+    // outline: 1px solid green;
+  }
+  .comments-list .comments-list__info {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.25;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: var(--grey-color);
+    margin-bottom: 10px;
+  }
 
-.comments-list .comments-list-icon__vk {
-  // outline: 1px solid green;
-  width: 30px;
-  height: 30px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.comments-list__description {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 20px;
-  text-align: center;
-  color: var(--mob-grey-color);
-}
+  .comments-list .comments-list-icon__vk {
+    // outline: 1px solid green;
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .comments-list__description {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    color: var(--mob-grey-color);
+  }
 
-.comments-list__item {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 30px;
-}
+  .comments-list__item {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 30px;
+  }
 
-.comments-list__description span {
-  display: inline-block;
-  color: var(--orange-color);
-  text-decoration: underline;
-}
-// =========
-.comments-under__list {
-  margin-top: 20px;
-  margin-bottom: 200px;
-  display: flex;
-  justify-content: center;
-}
-.comments-under__icon-left-arrow {
-  margin-right: 30px;
-  max-width: 25px;
-  max-height: 30px;
-}
-.comments-under__icon-right-arrow {
-  margin-left: 30px;
-  max-width: 25px;
-  max-height: 30px;
-}
+  .comments-list__description span {
+    display: inline-block;
+    color: var(--orange-color);
+    text-decoration: underline;
+  }
+  // =========
+  .comments-under__list {
+    margin-top: 20px;
+    margin-bottom: 200px;
+    display: flex;
+    justify-content: center;
+  }
+  .comments-under__icon-left-arrow {
+    margin-right: 30px;
+    max-width: 25px;
+    max-height: 30px;
+  }
+  .comments-under__icon-right-arrow {
+    margin-left: 30px;
+    max-width: 25px;
+    max-height: 30px;
+  }
 
-.comments-under__item:nth-child(-n + 3) {
-  margin-right: 10px;
+  .comments-under__item:nth-child(-n + 3) {
+    margin-right: 10px;
+  }
 }
