--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,34 +1,34 @@
 <section class="section"> 
     <div class="container problems-container">
-        <h2 class="problems-title">Главные проблемы учеников 
+        <h2 class="problems-title">Главные проблемы учеников <br>
             на English ВНО, которые <br>
             мы <span class="problems-word-color">помогаем</span> решить
         </h2>
         <div class="problems-block-white">
-        <ul class="problems-item">
-            <li class="problems-list">
+        <ul class="problems-list">
+            <li class="problems-item">
             <h3 class="problems-number">01</h3>
                 <p class="problems-text">Название грамматики</p>
             </li>  
-            <li class="problems-list">
+            <li class="problems-item">
                 <h3  class="problems-number">02</h3>
                     <p class="problems-text">Неумение вомпринимать
                         устную английскую речь</p>
             </li>
-            <li class="problems-list">
+            <li class="problems-item">
                 <h3  class="problems-number">03</h3>
                     <p class="problems-text">Скупой словарный запас
                         для написани сочинения</p>
             </li>
-            <li class="problems-list">
+            <li class="problems-item">
                 <h3  class="problems-number">04</h3>
-                    <p class="problems-text">Подготовка в одиночку</p>
+                    <p class="problems-text training">Подготовка в одиночку</p>
             </li>
-            <li class="problems-list">
+            <li class="problems-item">
                 <h3  class="problems-number">05</h3>
                     <p class="problems-text">Отсутствие единого ресурса знаний</p>
             </li>
-            <li class="problems-list">
+            <li class="problems-item">
                 <h3  class="problems-number">06</h3>
                     <p class="problems-text">Недостатой самоорганизации и лень</p>
             </li> 
