--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -12,6 +12,7 @@
         padding-top: 59px;
     }
     @media screen and (min-width: 1200px) {
+        height: 560px;
         padding-top: 100px;
 
     }
@@ -73,7 +74,6 @@
         padding-right: 112px;
         padding-top: 70px;
         padding-bottom: 62px;
-        outline: 1px solid red;
     }
 }
 
