Удалила лишние секции и обновила миксин

--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -13,6 +13,7 @@
   font-family: Montserrat;
   font-style: normal;
   text-align: center;
+  color: $white;
   background: url('../images/bg_img_tablet-min.png') $text-dark;
   background-repeat: no-repeat;
   background-position: 82% 50%;
@@ -26,12 +27,12 @@
 }
 
 .registration-form__header {
-  @include font(800, 14px, 1.357, 0.03em, $white);
+  @include font(800, 14px, 1.357, 0.03em);
   margin-bottom: 30px;
 }
 
 .registration-form__description {
-  @include font(600, 12px, 1.25, 0.08em, $white);
+  @include font(600, 12px, 1.25, 0.08em);
   margin-bottom: 30px;
 }
 
@@ -46,7 +47,7 @@
   padding: 14px 0;
   margin-top: 50px;
   border: none;
-  @include font(700, 12px, 1.25, 0.08em, $white);
+  @include font(700, 12px, 1.25, 0.08em);
   text-transform: uppercase;
   text-align: center;
   background-color: $accent-color;
@@ -65,20 +66,20 @@
   padding-left: 28px;
   background-color: transparent;
   border: 1px solid $white;
-  @include font(600, 14px, 1.214, 0.08em, $white);
+  @include font(600, 14px, 1.214, 0.08em);
 }
 
 .registration-form__input::placeholder {
-  @include font(600, 14px, 1.214, 0.08em, $white);
+  @include font(600, 14px, 1.214, 0.08em);
 }
 
 @media screen and (min-width: $tablet) {
   .registration-form__header {
-    @include font(800, 26px, 1.307, 0.03em, $white);
+    @include font(800, 26px, 1.307, 0.03em);
   }
 
   .registration-form__description {
-    @include font(600, 14px, 1.214, 0.08em, $white);
+    @include font(600, 14px, 1.214, 0.08em);
     margin-bottom: 30px;
   }
 
@@ -113,19 +114,19 @@
 
   .registration-form__header {
     width: 1090px;
-    @include font(800, 46px, 1.304, 0.03em, $white);
+    @include font(800, 46px, 1.304, 0.03em);
     margin-bottom: 50px;
   }
 
   .registration-form__description {
-    @include font(600, 30px, 1.233, 0.08em, $white);
+    @include font(600, 30px, 1.233, 0.08em);
     margin-bottom: 56px;
   }
 
   .registration-form__input {
     width: 478px;
     height: 70px;
-    @include font(600, 20px, 1.2, 0.08em, $white);
+    @include font(600, 20px, 1.2, 0.08em);
   }
 
   .registration-form__field + .registration-form__field {
@@ -136,6 +137,6 @@
     margin-top: 80px;
     width: 354px;
     height: 70px;
-    @include font(700, 14px, 1.214, 0.08em, $white);
+    @include font(700, 14px, 1.214, 0.08em);
   }
 }
