--- a/src/sass/layout/_our_programm.scss
+++ b/src/sass/layout/_our_programm.scss
@@ -1,4 +1,7 @@
 .our-programm__h2{
+    padding-top: 50px;
+    margin-bottom: 43px;
+    text-align: center;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
@@ -28,10 +31,12 @@ line-height: 2;
 letter-spacing: 0.08em;
 text-transform: uppercase;
 color: #FFFFFF;
-
+margin-left: -30px;
+margin-bottom: 5px;
 }
 
 .our-programm__h4{
+    margin-bottom: 5px;
 font-family: Montserrat;
 font-style: normal;
 font-weight: bold;
@@ -73,14 +78,36 @@ color: #111518;
 }
 
 .our-programm{
-display: block;
+// display: block;
+height: 2050px;
 width: 320px;
 background: #111518;
 }
 
 .our-programm__list{
-display: block;
-width: 140px;
-margin: 0 auto;
+// width: 160px;
+padding-left: 88px;
+padding-right: 40px;
+}
+// .our-programm-section{
+// background: #111518;
 
+// }
+
+.our-programm__h3::before{
+    display: inline-block;
+    content: " ";
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    background: #FF6B09;
+    margin-right: 20px;
+
+
+}
+.our-programm__list-outter{
+padding-bottom: 40px;
+}
+.our-programm__list-inner{
+padding-top: 8px;    
 }
