--- a/src/partials/our-programm.html
+++ b/src/partials/our-programm.html
@@ -1,39 +1,77 @@
-<section >
+<section class="our-programm-section">
     <div class="our-programm">
         <H2 class="our-programm__h2">Наша программа</H2>
         <ul class="our-programm__list">
-            <li class="our-programm__h3">1 семестр</li>
-            <li class="our-programm__h4">— Grammar</li>
-            <li class="our-programm__text">Nouns & Articles Adjectives & Adverb</li>
-            <li class="our-programm__h4">— Vocabulary</li>
-            <li class="our-programm__text">Family & Relations People & Society</li>
+            <li class=our-programm__list-outter>
+                <ul>
+                <li>
+                <h3 class="our-programm__h3">1 семестр</h3>
+                <h4 class="our-programm__h4">— Grammar</h4>
+                <p class="our-programm__text">Nouns & Articles<br> Adjectives & Adverb</p>
+                </li>
+                <li class=our-programm__list-inner>
+                <h4 class="our-programm__h4">— Vocabulary</h4>
+                <p class="our-programm__text">Family & Relations <br>People & Society</p>
+                </li>
+                </ul>
+            </li>
+            <li class=our-programm__list-outter>
+                <ul>
+                <li>
+                <h3 class="our-programm__h3">2 семестр</h3>
+                <h4 class="our-programm__h4">— Grammar</h4>
+                <p class="our-programm__text">Pronouns<br> Active Voice<br> Passive Voice</p>
+                </li>
+                <li class=our-programm__list-inner>
+                <h4 class="our-programm__h4">— Vocabulary</h4>
+                <p class="our-programm__text">Home<br> School<br> Work</p>
+                </li>
+                </ul>
+            </li>
+            <li class=our-programm__list-outter>
+                <ul>
+                <li>
+                <h3 class="our-programm__h3">3 семестр</h3>
+                <h4 class="our-programm__h4">— Grammar</h4>
+                <p class="our-programm__text">Modal verbs <br>Infinitive Gerund<br> Participle: 1, 2</p>
+                </li>
+                <li class=our-programm__list-inner>
+                <h4 class="our-programm__h4">— Vocabulary</h4>
+                <p class="our-programm__text">Travel & Tourism<br> Culture & Free Time Sport</p>
+                </li>
+                <li class=our-programm__list-inner>
+                <h4 class="our-programm__h4">— Writing</h4>
+                <p class="our-programm__text">Informal Letter</p>
+                </li>
+                </ul>
+            </li>
+            <li class=our-programm__list-outter>
+                <ul>
+                <li>
+                <h3 class="our-programm__h3">4 семестр</h3>
+                <h4 class="our-programm__h4">— Grammar</h4>
+                <p class="our-programm__text">Clauses: Conditional and <br>Wishes <br>Direct / Reported speech <br>Preposition <br>Conjunction Numeral</p>
+                </li>
+                <li class=our-programm__list-inner>
+                <h4 class="our-programm__h4">— Vocabulary</h4>
+                <p class="our-programm__text">Healthy Living <br>Nature & Environment<br> Money</p>
+                </li>
+                <li class=our-programm__list-inner>
+                <h4 class="our-programm__h4">— Writing</h4>
+                <p class="our-programm__text">Formal Letter</p>
+                </li>
+                </ul>
+            </li>
+            <li class=our-programm__list-outter>
+                <ul>
+                <li>
+                <h3 class="our-programm__h3"> семестр</h3>
+                <h4 class="our-programm__h4">— </h4>
+                <p class="our-programm__text">Revision Tests</p>
+                </li>
+                </ul>
+            </li>
 
-            <li class="our-programm__h3">2 семестр</li>
-            <li class="our-programm__h4">— Grammar</li>
-            <li class="our-programm__text">Pronouns Active Voice Passive Voice</li>
-            <li class="our-programm__h4">— Vocabulary</li>
-            <li class="our-programm__text">Home School Work</li>
-
-            <li class="our-programm__h3">3 семестр</li>
-            <li class="our-programm__h4">— Grammar</li>
-            <li class="our-programm__text"> Modal verbs Infinitive Gerund Participle: 1, 2</li>
-            <li class="our-programm__h4">— Vocabulary</li>
-            <li class="our-programm__text">Travel & Tourism Culture & Free Time Sport</li>
-            <li class="our-programm__h4">— Writing</li>
-            <li class="our-programm__text">Informal Letter</li>
-
-            <li class="our-programm__h3">4 семестр</li>
-            <li class="our-programm__h4">— Grammar</li>
-            <li class="our-programm__text"> Clauses: Conditional and Wishes Direct / Reported speech Preposition Conjunction Numeral</li>
-            <li class="our-programm__h4">— Vocabulary</li>
-            <li class="our-programm__text">Healthy Living Nature & Environment Money</li>
-            <li class="our-programm__h4">— Writing</li>
-            <li class="our-programm__text">Formal Letter</li>
-
-            <li class="our-programm__h3">5 семестр</li>
-            <li class="our-programm__h4">—</li>
-            <li class="our-programm__text">Revision Tests</li>
-      
         </ul>
     </div>
     <div class="why-we">
