--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -58,6 +58,239 @@ textarea {
   }
 }
 
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.advantages__title {
+  padding-bottom: 30px;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.advantages-list {
+  margin: 0 auto;
+  padding: 0;
+}
+
+.advantages-list__item {
+  margin: 0 auto;
+  width: 280px;
+  height: 280px;
+  padding-top: 30px;
+  padding-bottom: 22px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 15px;
+  background: var(--white-text-color);
+  -webkit-box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+}
+
+.advantages-list__icon {
+  display: block;
+  margin: 0 auto 20px;
+  width: 40px;
+  height: 40px;
+  fill: orange;
+}
+
+.advantages-list__title {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.429;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--title-text-color);
+}
+
+.advantage-list__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--primary-text-color);
+}
+
+.our-programm__h2 {
+  padding-top: 50px;
+  margin-bottom: 43px;
+  text-align: center;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+}
+
+.why-we__h2 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.35;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+}
+
+.our-programm__h3 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-left: -30px;
+  margin-bottom: 5px;
+}
+
+.our-programm__h4 {
+  margin-bottom: 5px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.667;
+  letter-spacing: 0.08em;
+  color: #FF6B09;
+}
+
+.our-programm__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  letter-spacing: 0.08em;
+  color: #B9B9B9;
+  opacity: 0.5;
+}
+
+.why-we__h3 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.642;
+  letter-spacing: 0.08em;
+  color: #FF6B09;
+}
+
+.why-we__p {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.428;
+  letter-spacing: 0.08em;
+  color: #111518;
+}
+
+.our-programm {
+  height: 2050px;
+  width: 320px;
+  background: #111518;
+}
+
+.our-programm__list {
+  padding-left: 88px;
+  padding-right: 40px;
+}
+
+.our-programm__h3::before {
+  display: inline-block;
+  content: " ";
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  background: #FF6B09;
+  margin-right: 20px;
+}
+
+.our-programm__list-outter {
+  padding-bottom: 40px;
+}
+
+.our-programm__list-inner {
+  padding-top: 8px;
+}
+
+.teacher-title {
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 1.308;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+
+.teacher-name {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  border: 1px solid #b9b9b9;
+  margin-bottom: 30px;
+}
+
+.teacher-skill {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.06em;
+  margin-bottom: 5px;
+}
+
+.teacher-education {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  color: #b9b9b9;
+  margin-bottom: 10px;
+}
+
+.teacher-link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #ff6b09;
+}
+
+@media screen and (max-width: 767px) {
+  .teacher-img {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .teacher {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .teacher__right-side {
+    margin-left: 41px;
+  }
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
