--- a/src/partials/howIItsMade.html
+++ b/src/partials/howIItsMade.html
@@ -5,12 +5,14 @@
         <h2 class="made-header made-titan">how it’s made?</h2>
         <div class="made-description">
             <div class="made-box-wrapper">
-                <img class="made320"
-                    srcset="./images/howItsMade/made_320@1x.jpg 1x, ./images/howItsMade/made_320@2x.jpg 2x"
-                    src="./images/howItsMade/made_320@1x.jpg" alt="Cow" width="100%">
-                <img class="made768"
-                    srcset="./images/howItsMade/made_768@1x.jpg 1x, ./images/howItsMade/made_768@2x.jpg 2x"
-                    src="./images/howItsMade/made_768@1x.jpg" alt="Cow" width="100%">
+                <img alt="Cow" src="./images/howItsMade/made_320@1x.png" srcset="
+                    ./images/howItsMade/made_320@1x.png 320w,
+                    ./images/howItsMade/made_320@2x.png 640w,
+                    ./images/howItsMade/made_768@1x.png 768w,
+                    ./images/howItsMade/made_1200@1x.png 1200w,
+                    ./images/howItsMade/made_768@2x.png 1536w,
+                    ./images/howItsMade/made_1200@2x.png 2400w
+                " width="100%" />
             </div>
             <div class="made-discription-text">
                 <p class="made-discription-first">
@@ -22,10 +24,8 @@
                     Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
                     imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
                     massa nibh, tincidunt.
-
-                    Aliquam erat volutpat. Aenean accumsan.
                 </p>
-
+                <p class="made-last-text">Aliquam erat volutpat. Aenean accumsan.</p>
                 <a class="discription-btn" href="#">
                     <span class="made-text-btn">Read more</span>
                     <span class="made-arrow-btn">&#62;</span>
