transfer cod to partial

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -292,6 +292,19 @@ h3 {
   font-family: "Titan One", cursive;
 }
 
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   max-width: 320px;
   padding-left: 20px;
