--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -22,12 +22,15 @@
 <footer>
     <div class="footer-white">
         <div class="container">
-            <span class=" logo"> </span>
+            <span class=" logo"> Fire</span>
             <div class="phone-groupe">
-                <svg class="phone">
-                    <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
-                </svg>
-                <span class="phone-number">+38 (000) 000 00 00</span>
+                <a href="#" class="footer-callme">
+                    <svg class="phone">
+                        <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
+                    </svg>
+
+                    <span class="phone-number">+38 (000) 000 00 00</span>
+                </a>
                 <span class="footer-line"></span>
                 <img src="./images/instagram.jpg" alt="instagram" width="40" height="40">
             </div>
