--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -983,6 +983,11 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.footer-black .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -996,6 +1001,9 @@ a {
 }
 .footer-line {
   display: none;
+}
+.footer-callme {
+  margin-bottom: 30px;
 }
 
 .phone {
@@ -1017,24 +1025,77 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
+  .request-form {
+    padding: 50px 40px 70px 40px;
+    width: 768px;
+    min-height: 520px;
+  }
+  .request-form-input {
+    width: 390px;
+  }
+  .request-form-input:nth-child(2) {
+    margin-bottom: 30px;
+  }
+  .request-invite {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.08em;
+    margin-bottom: 40px;
+  }
+  .request-title {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+  }
+
   .footer-line {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    display: block;
     border-bottom: 1px solid var(--txt-grey);
     -webkit-transform: rotate(90deg);
             transform: rotate(90deg);
-    width: 70px;
+    width: 48px;
     top: 60px;
     left: -28px;
   }
+  .footer-white {
+    height: 125px;
+  }
+  .footer-white .container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer-black .container {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .footer-callme {
+    margin-bottom: 0;
+  }
 
   .phone-groupe {
-    width: 698;
-    border: 1 solid red;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }/*# sourceMappingURL=main.css.map */
