--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,13 +2,24 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
-    font-size: 26px;
+    font-size: 16px;
     line-height: 1.231;
     /* identical to box height */
     letter-spacing: 0.04em;
     color:black;
 }
-
+.header-nav-logo-additional .header-nav-logo-first{
+    color:#FFFFFF;
+}
+.header-nav-logo-additional .header-nav-logo-second{
+    color:#FFFFFF;
+}
+.header-nav-logo-additional .header-nav-logo-third{
+    color:#FFFFFF;
+}
+.header-nav-logo-additional .header-nav-logo-fourth{
+    color:#FFFFFF;
+}
 .header-nav-sheet{
     font-family: Montserrat;
     font-style: normal;
@@ -26,18 +37,19 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
-    font-size: 8px;
+    font-size: 5px;
     line-height: 1.25;
 /* identical to box height */
     letter-spacing: 0.18em;
     text-transform: uppercase;
-    color: #FF6B09;
+    color: #111518;
+    margin-right: 2px;
 } 
 .header-nav-logo-fourth{
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
-    font-size: 8px;
+    font-size: 5px;
     line-height: 1.25;
 /* identical to box height */
     letter-spacing: 0.18em;
@@ -46,23 +58,15 @@
 }
 
 .header-logo-icon{
-    width: 22px;
-    height: 30px;
+    width: 14px;
+    height: 19px;
     fill:#FF6B09;
-    margin: 0 4px;
+    margin: 0 2px;
     margin-bottom: 3px;
 }
 .header-nav-logo-top{
     display: flex;
     align-items: center;
-}
-.header-logo-mobile-icon, .header-logo-mobile-black-icon{
-    width: 80px;
-    height: 28.5px;
-    margin-top: 30px;
-}
-.header-logo-mobile-black-icon{
-    margin-left: 20px;
 }
 
 .header-additional-menu{
@@ -105,10 +109,17 @@
     padding: 0;
     
 }
+
 .header-nav{
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
+    padding-top: 30px;
+}
+.header-nav-logo-additional{
+    padding-top: 30px;
+    padding-left: 20px;
+    text-decoration: none;
 }   
 .close-menu-btn .close-btn-icon{
     display: none;
@@ -158,14 +169,23 @@
     background: rgba(17, 21, 24, 0.9);
     justify-content: center;
 }
+.header-nav-logo-bottom{
+    display: flex;
+
+}
 .header-additional-bottom{
     display: flex;
     flex-direction: column;
     align-items: center;
 }    
 @media screen and (min-width:100px) and (max-width:767px){
-    .header-nav-logo{
+    .header-button-tablet{
         display: none;
+    }
+}
+@media screen and (min-width:768px) and (max-width:1315px){
+    .header-button{
+        display:none;
     }
 }
 @media screen and (min-width:768px){
@@ -173,18 +193,122 @@
         display: none;
     }
     .header{
-        position: relative;
-    }
-    .header-button{
-        position: absolute;
-        transform: translateY(-50%);
-        transform: translateX(50%);
-    }
-    .header{
         min-height: 88px;
         top:40px;
     }
+    
+    .header-nav{
+        padding-top: 40px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .header-button-tablet{
+        width: 260px;
+        height: 48px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 1.25;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        color: #FF6B09;
+        border: 2px solid #FF6B09;
+        background: #FFFFFF;
+        justify-content: center;
+        margin-right: 45px;
+    }
+    .header-btn-tablet-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .header-nav-list{
+        margin-top: 160px;
+    }
+    .close-menu-btn.is-open .header-nav-logo-first{
+        color: #FFFFFF;
+    }
+    .header-nav-logo-first, .header-nav-logo-second{
+        font-size: 26px;
+    }
+    .header-nav-logo-third{
+        font-size: 8px;
+        color:#FF6B09;
+        margin-right: 2px;
+    } 
+    .header-nav-logo-fourth{
+        font-size: 8px;
+    }
+    .header-logo-icon{
+        width: 22px;
+        height: 30px;
+        fill:#FF6B09;
+        margin: 0 4px;
+        margin-bottom: 3px;
+    }
+    .header-nav-logo-additional{
+        padding-top: 40px;
+    }
+    .header-nav-logo-additional .header-nav-logo-third{
+        color:#FF6B09;
+    }
+}
+@media screen and (min-width:1316px){
+    .header-button-tablet{
+        display:none;
+    }
+    .header-additional-menu{
+        position: static;
+        opacity: 1;
+        background-color: #FFFFFF;
+        flex-direction: row;
+        height: max-content;
+        justify-content: space-between;
+    }
+    .header-list{
+        font-size: 14px;
+        line-height: 17px;
+        color: #B9B9B9;
+    }
+    .header-nav-logo-additional{
+        display: none;
+    }
+    .header-btn-tablet-container{
+        display:none
+    }
+    .header-additional-bottom{
+        flex-direction: row;
+    }
+    .header-nav-list{
+        margin-top: 0;
+        display: flex;
+        flex-direction: row;
+    }
+    .header-button{
+        width: 336px;
+        height: 70px;
+        margin-top: 0;
+        font-size: 14px;
+        line-height: 1.21;
+        letter-spacing: 0.14em;
+        background: #FFFFFF;
+        justify-content: center;
+        margin-left: 60px;
+    }
+    .header-nav{
+        padding-top: 33px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .header-nav-sheet:not(:last-child){
+        margin-right: 40px;
+    }
     .header-nav-logo{
-        position:absolute;
+        margin-right: 167px;
     }
 }
