--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,6 @@
 <header class="header">
     <div class="container header-container">
             <nav class="header-nav">
-                <a class="header-logo-mobile">
-                    <svg class="header-logo-mobile-icon">
-                        <use href="../sprite-header.svg#icon-logo"></use>
-                    </svg>
-                </a>
                 <a class="header-nav-logo" href="#">
                     <div class="header-nav-logo-top">
                         <span  class="header-nav-logo-first">Hell</span>
@@ -19,17 +14,28 @@
                         <span class="header-nav-logo-fourth">английский</span>
                     </div>
                 </a>
-                <button type="button" class="close-menu-btn is-open" data-menu-button>
-                    <svg class="close-menu-icon" aria-label="Переключатель мобильного меню">
-                        <use  class="close-btn-icon"  href="../sprite-header.svg#icon-close_40px-1"></use>
-                        <use class="menu-btn-icon"  href="../sprite-header.svg#icon-menu_40px-1"></use>
-                    </svg>
-                </button>
-                <div class="header-additional-menu is-open" data-menu>
-                    <a class="header-logo-mobile-black">
-                        <svg class="header-logo-mobile-black-icon">
-                            <use href="../sprite-header.svg#icon-logo-1"></use>
+                <div class="header-btn-tablet-container">
+                    <button class="header-button-tablet" type="button">Консультация по телефону</button>
+                    <button type="button" class="close-menu-btn is-open" data-menu-button>
+                        <svg class="close-menu-icon" aria-label="Переключатель мобильного меню">
+                            <use  class="close-btn-icon"  href="../sprite-header.svg#icon-close_40px-1"></use>
+                            <use class="menu-btn-icon"  href="../sprite-header.svg#icon-menu_40px-1"></use>
                         </svg>
+                    </button>
+                </div>
+                <div class="header-additional-menu is-open" data-menu>
+                    <a class="header-nav-logo-additional" href="#">
+                        <div class="header-nav-logo-top">
+                            <span  class="header-nav-logo-first">Hell</span>
+                            <svg class="header-logo-icon">
+                                <use href="../sprite.svg#icon-fire"></use>
+                            </svg>
+                            <span  class="header-nav-logo-second">EN</span>
+                        </div>
+                        <div class="header-nav-logo-bottom">
+                            <span class="header-nav-logo-third">Адский</span>
+                            <span class="header-nav-logo-fourth">английский</span>
+                        </div>
                     </a>
                     <div class="header-additional-bottom">
                         <ul class="header-nav-list">
