добавил картинки webp, стили в section

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -124,7 +124,15 @@
       </li>
     </ol>
 
-    <!-- <picture>
+    <picture>
+      <source
+        srcset="
+          ./images/our-program/our-program-desktop.webp    1x,
+          ./images/our-program/our-program-desktop@2x.webp 2x
+        "
+        media="(min-width: 1200px)"
+        type="image/webp"
+      />
       <source
         srcset="
           ./images/our-program/our-program-desktop.png    1x,
@@ -135,11 +143,27 @@
       />
       <source
         srcset="
+          ./images/our-program/our-program-tablet.webp    1x,
+          ./images/our-program/our-program-tablet@2x.webp 2x
+        "
+        media="(min-width: 768px)"
+        type="image/webp"
+      />
+      <source
+        srcset="
           ./images/our-program/our-program-tablet.png    1x,
           ./images/our-program/our-program-tablet@2x.png 2x
         "
         media="(min-width: 768px)"
         type="image/png"
+      />
+      <source
+        srcset="
+          ./images/our-program/our-program-mobile.webp    1x,
+          ./images/our-program/our-program-mobile@2x.webp 2x
+        "
+        media="(min-width: 320px)"
+        type="image/webp"
       />
       <source
         srcset="
@@ -153,7 +177,7 @@
         src="./images/our-program/our-program-desktop.png"
         alt="преподаватель проверяет учеников в классе"
       />
-    </picture> -->
+    </picture>
 
     <h2 class="choice__section-title">Почему нас выбирают</h2>
 
